--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- mockito testing -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- servlet -->
         <dependency>
             <groupId>javax.servlet</groupId>
